# slide-games

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
examples/: maze_demo.py  pacman_demo.py  run_all_demos.py  snake_demo.py  sokoban_demo.py
slide_games/: __init__.py  auth.py  builder.py  client.py  gfx.py  maze_gen.py  models.py  renderer.py  themes.py
slide_games/games/: __init__.py  base.py  maze.py  pacman.py
tests/: test_builder.py  test_games.py  test_gfx.py  test_maze_gen.py  test_models.py  test_renderer.py
