[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "slide-games"
version = "0.1.0"
description = "Build interactive arcade games that run entirely inside Google Slides"
readme = "README.md"
license = {text = "MIT"}
license-files = ["LICENSE"]
requires-python = ">=3.11"
authors = [
    {name = "Sahil Menon", email = "sahilmenon01@gmail.com"},
]
keywords = ["google-slides", "game", "arcade", "presentation", "slides", "interactive"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
    "Topic :: Multimedia :: Graphics :: Presentation",
    "Typing :: Typed",
]
dependencies = [
    "google-api-python-client>=2.100.0",
    "google-auth-httplib2>=0.1.1",
    "google-auth-oauthlib>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "build>=1.0",
    "twine>=4.0",
]

[project.urls]
Homepage = "https://github.com/sahilmenon/slide-games"
"Bug Tracker" = "https://github.com/sahilmenon/slide-games/issues"
Changelog = "https://github.com/sahilmenon/slide-games/blob/main/CHANGELOG.md"
Source = "https://github.com/sahilmenon/slide-games"

[tool.hatch.build.targets.wheel]
packages = ["slide_games"]

[tool.hatch.build.targets.sdist]
include = [
    "slide_games/",
    "tests/",
    "examples/",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]
exclude = [
    "credentials.json",
    "token.json",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
